@@ -1,3 +1,5 @@
+2006/2/4 -- released version 20060204_trunk
+
 2006/2/3 -- released version 20060203_trunk
 
 2006/2/2 -- released version 20060202_trunk
